components/Roll/Roll.module.scss
@use "app/variables.module.scss";

.container {
  @include variables.component-margin;

  & {
    padding-top: variables.$l-margin;
  }
}

.header-summary {
  display: none;

  @include variables.desktop {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: variables.$m-margin;
    margin-top: variables.$xxl-margin;
    margin-left: auto;
    margin-right: auto;
    max-width: variables.$inner-width;
  }
}

.header-actions {
  display: flex;
  align-items: center;
  gap: variables.$m-margin;
}

.header-meta {
  display: flex;
  align-items: center;
  gap: variables.$xxs-margin;

  @include variables.desktop {
    gap: variables.$m-margin;
  }
}

.header-buttons {
  display: inline-flex;
  align-items: center;
  gap: variables.$xxs-margin;
}

.mobile-actions {
  display: flex;
  align-items: center;
  justify-self: center;
  gap: variables.$xxxs-margin;

  @include variables.desktop {
    display: none;
  }
}

.results {
  font-size: 1.1rem;
  font-weight: 500;
}

.reset-button {
  display: none;

  @include variables.tablet {
    display: none;
  }

  @include variables.desktop {
    all: unset;
    cursor: pointer;
    display: inline-block;

    @include variables.text-link;

    &:disabled {
      color: variables.$primary-light-color;
      border-bottom-color: variables.$primary-light-color;
      cursor: not-allowed;
    }
  }
}

.sort-button {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  padding: 6px 7px 6px 10px;
  height: 40.5px;
  width: 40.5px;
  font: inherit;
  text-align: center;
  color: variables.$secondary-color;
  border-radius: variables.$border-radius;
  border: 1px solid variables.$primary-light-color;
  background-color: variables.$primary-medium-color;
  transition:
    border 0.9s ease-in-out,
    background-color 0.9s ease-in-out;
  cursor: pointer;

  @include variables.hover-supported {
    &:hover {
      border: 1px solid variables.$secondary-color;
      background-color: variables.$primary-dark-color;
    }
  }
}

.map-button {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  gap: variables.$xxxs-margin;
  height: 40.5px;
  padding: 0 variables.$xs-margin;
  font: inherit;
  font-weight: 400;
  color: variables.$secondary-color;
  border: 1px solid variables.$primary-light-color;
  border-radius: variables.$border-radius;
  background-color: variables.$primary-medium-color;
  transition:
    border 0.9s ease-in-out,
    background-color 0.9s ease-in-out;
  cursor: pointer;

  @include variables.hover-supported {
    &:hover {
      border: 1px solid variables.$secondary-color;
      background-color: variables.$primary-dark-color;
    }
  }
}

.map-button-icon {
  position: relative;
  width: 0.7rem;
  height: 0.7rem;
  border: 2px solid currentColor;
  border-radius: 50% 50% 50% 0;
  rotate: -45deg;
  translate: 0 -1px;

  &::after {
    content: "";
    position: absolute;
    top: 50%;
    left: 50%;
    width: 0.22rem;
    height: 0.22rem;
    border-radius: 50%;
    background-color: currentColor;
    translate: -50% -50%;
  }
}

.sort-button-label {
  display: inline-flex;
  align-items: center;
  gap: 4px;
}

.sort-button-letters {
  display: inline-flex;
  flex-direction: column;
  align-items: center;
  gap: 2px;
  line-height: 0.85;
}

.sort-button-arrow {
  font-size: 1.8rem;
  line-height: 1;
}

.sort-button-top,
.sort-button-bottom {
  font-size: 0.75rem;
  font-weight: 600;
}

.roll-container {
  display: block;

  @include variables.desktop {
    display: flex;
    margin: 0 auto;
    max-width: variables.$inner-width;
    gap: variables.$base-margin;
  }
}

.controls {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  padding-bottom: variables.$s-margin;

  @include variables.desktop {
    flex-direction: column;
    align-items: flex-start;
    align-content: flex-start;
    justify-content: flex-start;
    padding-bottom: 0;
    width: 380px;
  }

  .results-container {
    display: grid;
    height: variables.$base-margin;
    width: 100%;
    align-items: center;
    grid-template-columns: 1fr auto 1fr;
  }

  .filter-button {
    justify-self: end;
    padding: variables.$xxs-margin variables.$xs-margin;
    font-size: 1rem;
    color: variables.$secondary-color;
    border-radius: variables.$border-radius;
    border: 1px solid variables.$primary-light-color;
    background-color: variables.$primary-medium-color;
    transition:
      border 0.9s ease-in-out,
      background-color 0.9s ease-in-out;
    cursor: pointer;

    @include variables.hover-supported {
      &:hover {
        border: 1px solid variables.$secondary-color;
        background-color: variables.$primary-dark-color;
      }
    }

    &--active {
      background-color: variables.$secondary-color;
      border-color: variables.$secondary-color;
      color: variables.$primary-dark-color;
      display: flex;
      align-items: center;
      gap: variables.$xxs-margin;
    }

    @include variables.desktop {
      display: none;
    }
  }

  .filter-button-badge {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    width: 20px;
    height: 20px;
    border-radius: 50%;
    background-color: variables.$primary-dark-color;
    color: variables.$secondary-color;
    font-size: 0.75rem;
    font-weight: 600;
    line-height: 1;
  }

  .filters-container {
    display: none;

    @include variables.tablet {
      display: none;
    }

    @include variables.desktop {
      display: block;
      width: 100%;
    }
  }
}

